<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.venderino.vendingmachine.ui.home.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:text="Everything for just $1!!!"
            android:textColor="@color/colorAccent"
            android:textSize="32dp"
            android:shadowColor="@color/task_green"
            app:layout_constraintBottom_toTopOf="@id/grid_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <GridLayout
            android:id="@+id/grid_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_space"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:background="@drawable/grid_background"
            android:columnCount="3"
            android:padding="@dimen/medium_space"
            app:layout_constraintBottom_toTopOf="@id/coin_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            >

            <ImageView
                android:id="@+id/cat_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/cat"

                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/cat" />

            <ImageView
                android:id="@+id/boxer_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/boxer"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/boxer" />

            <ImageView
                android:id="@+id/mustache_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/mustache"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/moustache" />

            <ImageView
                android:id="@+id/button_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/bull"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/coo" />

            <ImageView
                android:id="@+id/fox_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/fox"
                android:src="@drawable/foxy_out" />

            <ImageView
                android:id="@+id/dog_button"
                style="@style/ImageView.Vending"
                android:contentDescription="@string/dog"
                android:onClick="@{(view)-> homeViewModel.setApiKey(view)}"
                android:src="@drawable/doggo" />


        </GridLayout>

        <LinearLayout
            android:id="@+id/coin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginEnd="@dimen/large_spacing"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/coin_drag_destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid_background"
            >

            <ImageView
                android:id="@+id/coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/coin" />

            <TextView
                android:id="@+id/coin_count_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/vt323"
                android:textSize="32sp"
                tools:text="x2"/>

            <LinearLayout
                android:id="@+id/no_funds_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inverted_button_shape"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/small_space"
                android:visibility="gone">

                <TextView
                    android:id="@+id/no_funds_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="OUT OF COINS"
                    android:textSize="28sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/no_funds_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="Add and complete tasks to collect coins."
                    android:textSize="18sp"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/coin_drag_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/large_spacing"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coin_container">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_space"
                android:fontFamily="@font/vt323"
                android:text="Insert Coin 》》" />

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{homeViewModel.balanceString}"
                android:fontFamily="@font/vt323"
                tools:text="000"
                android:textSize="72dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:fontFamily="@font/vt323"
                android:text="《《 Insert Coin" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>