<resources>
    <string name="app_name">Vending Machine</string>
    <string name="cat">Cat</string>
    <string name="boxer">Advice</string>
    <string name="mustache">Mustache</string>
    <string name="bull">Bull</string>
    <string name="fox">Fox</string>
    <string name="pizza">Pizza</string>
    <string name="loading">Loading....</string>
    <string name="bull_title">Corporate Bullshit Generator</string>
    <string name="swanson_title">The Wisdom of Ron Swanson</string>
    <string name="dog">Dog</string>
    <string name="picture_of_a_dog">Picture of a dog</string>

    <string name="new_task">+ New Task</string>
    <string name="new_habit">+ New Habit</string>
    <string name="tasks_nav">Tasks</string>

    <string name="coin_count_key">COIN_COUNT</string>
    <string name="username_key">USER_NAME</string>
    <string name="no_funds">Insufficient Funds</string>
    <string name="task_fragment_title">Tasks And Habits</string>
    <string name="habit">habit</string>
    <string name="delete_all">Delete All</string>

    <string name="delete_all_message">Are you sure you want to delete all tasks and habits? </string>
    <string name="delete_this_task">Delete this task</string>
    <string name="habit_worker_error_tag">Habit reset</string>
    <string name="habit_worker_error_message">Couldn\'t access database</string>
    <string name="remaining_tasks_id">REMAINING_TASKS_CHANNEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_task_error">You haven\'t added any tasks yet. Click the \'+\' button in the top right corner to add a new task.</string>
    <string name="empty_habit_error">You haven\'t added any habits yet. Click the \'+\' button in the top right corner to add a new task.</string>
</resources>
