...
                app:cornerRadius="30dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center_vertical"
                app:icon="@drawable/ic_edit" />

            <CheckBox
                android:id="@+id/task_item_checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:buttonTint="@color/transparent"
                android:background="@drawable/checkbox_background" />
...
